# bp-extract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  app.py  bp_extract_cli.spec  bp_extract_gui.spec  build_exe.py  config.py  core.py  launch.bat  launch.py  main.py  pyproject.toml  setup_wizard.py
.github/workflows/: release.yml
static/: style.css
templates/: index.html  setup.html
tests/: conftest.py  test_app.py  test_config.py  test_core.py  test_launch.py  test_main.py  test_setup_wizard.py
