[project]
name = "bp-extract"
version = "0.4.0"
description = "Star Citizen Blueprint Acquisition Tracker with Web Interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
